--- a/mods/architectury-api.pw.toml
+++ b/mods/architectury-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Architectury API"
-filename = "architectury-6.5.69-fabric.jar"
+filename = "architectury-6.5.82-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/GEBcq08y/architectury-6.5.69-fabric.jar"
+url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/XV72M5Gg/architectury-6.5.82-fabric.jar"
 hash-format = "sha1"
-hash = "09aaab6454e67e90143213fc711f5bed5adc053e"
+hash = "5424b42018862b190985832c01c85ce934559c44"
 
 [update]
 [update.modrinth]
 mod-id = "lhGA9TYQ"
-version = "GEBcq08y"
+version = "XV72M5Gg"
