--- a/mods/create-fabric.pw.toml
+++ b/mods/create-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Fabric"
-filename = "create-fabric-0.5.0.i-961+1.19.2.jar"
+filename = "create-fabric-0.5.0.i-1017+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/eiOEbe83/create-fabric-0.5.0.i-961%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/EkeMb3jA/create-fabric-0.5.0.i-1017%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "3be598ac8286fcff461b22705fbc877c6c2249f1"
+hash = "2f0d7931c93e957eaf4302085dbc8d40ca3a381e"
 
 [update]
 [update.modrinth]
 mod-id = "Xbc0uyRg"
-version = "eiOEbe83"
+version = "EkeMb3jA"
