--- a/mods/simple-voice-chat.pw.toml
+++ b/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-fabric-1.19.2-2.4.2.jar"
+filename = "voicechat-fabric-1.19.2-2.4.8.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/lXmfKcJK/voicechat-fabric-1.19.2-2.4.2.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/I92gJvt9/voicechat-fabric-1.19.2-2.4.8.jar"
 hash-format = "sha1"
-hash = "e17b6f2164cde28a8b725d73fdfe50efeb6cf076"
+hash = "450f2fca8cf9afb3a294122cf0860f5d4a0edc85"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "lXmfKcJK"
+version = "I92gJvt9"
