--- a/mods/happiness-is-a-warm-gun.pw.toml
+++ b/mods/happiness-is-a-warm-gun.pw.toml
@@ -1,13 +1,13 @@
 name = "Happiness (is a) Warm Gun"
-filename = "HWGMod-1.19.2-1.4.8.jar"
+filename = "HWGMod-1.19.2-1.4.10.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/SPMW1tzD/versions/TJ2rJy2k/HWGMod-1.19.2-1.4.8.jar"
+url = "https://cdn.modrinth.com/data/SPMW1tzD/versions/3WNsTlxx/HWGMod-1.19.2-1.4.10.jar"
 hash-format = "sha1"
-hash = "0b600d2b017dcf4682dd277e329f5c762e4d697a"
+hash = "582a8cded6fe3b713b42d3443fe6d2c36556a39d"
 
 [update]
 [update.modrinth]
 mod-id = "SPMW1tzD"
-version = "TJ2rJy2k"
+version = "3WNsTlxx"
