--- a/mods/simple-voice-chat.pw.toml
+++ b/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-fabric-1.19.2-2.4.8.jar"
+filename = "voicechat-fabric-1.19.2-2.4.9.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/I92gJvt9/voicechat-fabric-1.19.2-2.4.8.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/P6Np9f5M/voicechat-fabric-1.19.2-2.4.9.jar"
 hash-format = "sha1"
-hash = "450f2fca8cf9afb3a294122cf0860f5d4a0edc85"
+hash = "e5f1fa5ecbf41cfd447dbc532e0c31e164163fa6"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "I92gJvt9"
+version = "P6Np9f5M"
