--- a/mods/azurelib.pw.toml
+++ b/mods/azurelib.pw.toml
@@ -1,13 +1,13 @@
 name = "AzureLib"
-filename = "azurelib-fabric-1.19.2-1.0.20.jar"
+filename = "azurelib-fabric-1.19.2-1.0.23.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/7zlUOZvb/versions/nqtHPfvh/azurelib-fabric-1.19.2-1.0.20.jar"
+url = "https://cdn.modrinth.com/data/7zlUOZvb/versions/FdFCkMSS/azurelib-fabric-1.19.2-1.0.23.jar"
 hash-format = "sha1"
-hash = "4f19e814078ddf0757e91277f110d83b9a711b02"
+hash = "8e1d9b2555710a0d75323cea58597a84f4cf8a8e"
 
 [update]
 [update.modrinth]
 mod-id = "7zlUOZvb"
-version = "nqtHPfvh"
+version = "FdFCkMSS"
