--- a/mods/create-fabric.pw.toml
+++ b/mods/create-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Create Fabric"
-filename = "create-fabric-0.5.0.i-1017+1.19.2.jar"
+filename = "create-fabric-0.5.1-b-build.1079+mc1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/EkeMb3jA/create-fabric-0.5.0.i-1017%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Xbc0uyRg/versions/q6x0xvc1/create-fabric-0.5.1-b-build.1079%2Bmc1.19.2.jar"
 hash-format = "sha1"
-hash = "2f0d7931c93e957eaf4302085dbc8d40ca3a381e"
+hash = "7890f0abfdcbdaf98d076cce4fa8ff1ea18b8718"
 
 [update]
 [update.modrinth]
 mod-id = "Xbc0uyRg"
-version = "EkeMb3jA"
+version = "q6x0xvc1"
