--- a/mods/villagerconfig.pw.toml
+++ b/mods/villagerconfig.pw.toml
@@ -1,6 +1,7 @@
 name = "VillagerConfig"
 filename = "villagerconfig-4.0.1+1.19.2.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/OClpEDe3/versions/XjM0hjz9/villagerconfig-4.0.1%2B1.19.2.jar"
