--- a/mods/simple-voice-chat.pw.toml
+++ b/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-fabric-1.19.2-2.4.11.jar"
+filename = "voicechat-fabric-1.19.2-2.4.13.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/DB81KuvO/voicechat-fabric-1.19.2-2.4.11.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/LKXveeun/voicechat-fabric-1.19.2-2.4.13.jar"
 hash-format = "sha1"
-hash = "0f0d371ca11379bf3964213351e223106a26e4be"
+hash = "8a2384fa86e8b0469bb8024b07ef369dee0c62be"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "DB81KuvO"
+version = "LKXveeun"
